# azure-edge-extensions-akri-operator-3p-connector

./: .gitignore  README.md  makefile
.devcontainer/: devcontainer.json
deploy/: connector-config-sample.yaml  connector-config.yaml  connector-template.yaml  deploy-aio.sh  http-server-asset-definition-1.yaml  http-server-asset-definition-2.yaml  http-server-asset-endpoint-profile-definition.yaml  mqttclient.yaml  rest-server-asset-definition.yaml  rest-server-asset-endpoint-profile-definition.yaml  tcp-asset-definition.yaml  tcp-asset-endpoint-profile-definition.yaml  tcp-service-device-definition.yaml
deploy/aio-broker/: iot-mq.sh
deploy/app/: httpthermostatconnectorapp.yaml  tcpconnector.yaml
lib/: Rfc1006LibNet.Advanced.deps.json  Rfc1006LibNet.Advanced.xml
src/: azure-edge-extensions-akri-operator-3p-connector.sln
src/SampleHttpServer/: ReadMe.md  server.js
src/SampleHttpServer/helm/: Chart.yaml  values.yaml
src/akri-connector-sample/EventDrivenTcpConnector/: CustomAdrClientWrapperProvider.cs  Dockerfile  EventDrivenTcpConnector.csproj  EventDrivenTcpConnectorWorker.cs  LeaderElectionConfigurationProvider.cs  MessageSchemaProvider.cs  Program.cs  TcpAccessor.cs
src/akri-connector-sample/EventDrivenTcpThermostatConnector/: EventDrivenTcpThermostatConnector.csproj
src/akri-connector-sample/HttpThermostatConnectorApp/: DatasetSamplerContext.cs  Dockerfile  HttpThermostatConnectorApp.csproj  IDatasetSampler.cs  (+7 more)
src/akri-mrpc-client/: Cargo.toml  mq-sat-tls-auth.yaml  mq-simple.yaml  mrpc-cli.sh  readme.md
src/akri-mrpc-client/src/: lib.rs  main.rs
(+34 files in other folders)
