[package]
name = "akri-mrpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
paho-mqtt = "0.12.5"
akri_mqtt = { version = "0.1.0", registry = "Akri-MQTT-Patterns" }
akri_mqtt_attributes = { version = "0.1.0", registry = "Akri-MQTT-Patterns" }
tokio = { version = "1.36", features = [ "full" ]}
uuid = {version = "1.4", features = ["v4", "fast-rng"]}
akri-mrpc-v1 = { path = "../../mrpc-api/akri-mrpc-v1" }
ctrlc = "3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
schemars = "0.8.0"
rand = "0.8"
akri-shared = { path = "../../shared" }
